--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,32 @@
-p {
+body, p {
   margin: 0;
 }
 
 .App {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 100vh;
+  width: 100vw;
+  padding: 32px;
+  box-sizing: border-box;
+  gap: 32px;
+  background-color: rgb(228, 228, 228);
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(10, 55px);
-  grid-template-rows: repeat(15, 55px);
-  border: 2px solid #3498db;
+  grid-template-columns: repeat(10, 50px);
+  grid-template-rows: repeat(14, 50px);
+  background-color: white;
 }
 
 .item {
-  background-color: teal;
+  background-color: rgb(67, 172, 172);
   color: white;
   padding: 8px;
   box-sizing: border-box;
-  border-radius: 4px;
+  border: 1px solid teal;
   position: relative;
   overflow: auto;
   height: 100%;
